@@ -168,6 +168,7 @@ public class FptrParameters {
     public int taxSystem = 0;
     public Integer itemTotalAmount = null;
     public boolean calcReportEnabled = false;
+    public boolean openReceiptOnBegin = false;
 
     public FptrParameters() throws Exception {
         font = new FontNumber(PrinterConst.FONT_NUMBER_NORMAL);
@@ -381,8 +382,8 @@ public class FptrParameters {
         FSReceiptItemDiscountEnabled = reader.readBoolean("FSReceiptItemDiscountEnabled", false);
         quantityCorrectionEnabled = reader.readBoolean("quantityCorrectionEnabled", true);
         calcReportEnabled = reader.readBoolean("calcReportEnabled", false);
-        
-        
+        openReceiptOnBegin = reader.readBoolean("openReceiptOnBegin", false);
+
         // paymentNames
         String paymentName;
         String propertyName;
