@@ -10,9 +10,10 @@
   August 23 2017
   deviceServiceVersion = 1013461
 	
-  [+] Added printRecMessage overload which accepts font number
   [*] Fixed rext printing with font number in check
   [*] Fixed #20: get rid of hardcoded payment names
+  [+] Added printRecMessage overload which accepts font number
+  [+] Added property openReceiptOnBegin to enable check opening on beginFiscalReceipt
 
 ********************************************************************************
 
